# AI-Document-Intelligence-Sys

./: README.md
amazon-clone/: package-lock.json  package.json
amazon-clone/src/: App.css  App.tsx
amazon-clone/src/components/: CategoryCards.tsx  Footer.tsx  HeroBanner.tsx  Navbar.tsx  ProductCard.tsx
amazon-clone/src/context/: CartContext.tsx
amazon-clone/src/data/: products.ts
amazon-clone/src/pages/: CartPage.tsx  CheckoutPage.tsx  HomePage.tsx  ProductPage.tsx
rag-qa-system/frontend/: package-lock.json
rag-qa-system/frontend/src/: App.css  App.tsx
rag-qa-system/frontend/src/components/: ChatArea.tsx  ChatMessage.tsx  FileUpload.tsx  Sidebar.tsx
rag-qa-system/frontend/src/services/: api.ts
rag-qa-system/frontend/src/types/: index.ts
rag-qa-system/rag-backend/: .env.example  .gitignore  pyproject.toml
rag-qa-system/rag-backend/app/: main.py
rag-qa-system/rag-backend/app/models/: schemas.py
rag-qa-system/rag-backend/app/routers/: documents.py  qa.py
rag-qa-system/rag-backend/app/services/: document_processor.py  rag_pipeline.py  vector_store.py
