[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.3"}
chromadb = "^1.5.5"
langchain-text-splitters = "^1.1.1"
python-multipart = "^0.0.22"
python-dotenv = "^1.2.2"
pypdf = "^6.9.2"
groq = "^1.1.2"
sentence-transformers = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
